<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/left"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/result_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/result_tv_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/result_tv_correctA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/result_tv_title"
        android:layout_marginTop="42dp"
        android:text="@string/result_tv_correctA"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/result_tv_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/result_tv_correctA"
        android:text="@string/result_tv_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/result_pb_percentage"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/result_tv_title"
        android:layout_alignRight="@+id/result_tv_title"
        android:layout_below="@+id/result_tv_correctA" />

    <TextView
        android:id="@+id/result_tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/result_tv_comment"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/result_b_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="68dp"
        android:text="@string/result_b_quit" />

    <Button
        android:id="@+id/result_b_tryagain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/result_b_quit"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/result_b_quit"
        android:text="@string/result_b_tryagain" />

</RelativeLayout>
